horizontal scrollbar fix

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -17,6 +17,10 @@
     background-color: @base-baground-color-op;
     border-top: 1px solid @base-border-color;
   }
+  &::-webkit-scrollbar:horizontal {
+    background-color: @base-baground-color-op;
+    border: none;
+  }
 
   .tree-view-root {
     background-color: @base-baground-color-op;
